<resources>
    <string name="app_name">HigoEc</string>
    <string name="dollar">￥</string>
    <string name="fa_chevron_right">{fa-chevron-right}</string>
    <string name="fa_angle_left">{fa-angle-left}</string>
    <string name="address_manage">地址管理</string>
    <string name="fa_plus_square_o">{fa-plus-square-o}</string>
    <string name="imput_answer_of_question">输入问题的答案</string>
    <string name="phone">手机号：</string>
    <string name="question">问题：</string>
    <string name="answer">答案：</string>
    <string name="sure">确定</string>
    <string name="total_comment">全部评论</string>
    <string name="receive_address">收货地址:</string>
    <string name="receiver">收货人：</string>
    <string name="please_input_receiver_name">请输入收件人姓名</string>
    <string name="please_input_receiver_phone">请输入收件人手机号</string>
    <string name="zipcode">邮    编 ：</string>
    <string name="please_input_zipcode">请输入邮编</string>
    <string name="address_area">所在地区：</string>
    <string name="address_detail">详细地址：</string>
    <string name="address_detail_hint">什么街多少号</string>
    <string name="input_phone">输入手机号</string>
    <string name="phone_identity">手机号验证</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_identity_code">请输入验证码</string>
    <string name="obtain_identity_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="higo">HIGO</string>
    <string name="market">集市</string>
    <string name="modify_pwd">修改密码</string>
    <string name="old_pwd">旧密码：</string>
    <string name="match_case">若包含字母，请注意区分大小写</string>
    <string name="new_pwd">新密码：</string>
    <string name="at_least_six_bits">至少输入6位数字或字母</string>
    <string name="sure_pwd">确认密码：</string>
    <string name="sure_order">确认订单</string>
    <string name="please_select_receiver_address">请选择收货地址</string>
    <string name="name">姓名</string>
    <string name="order_receive_address">收货地址：</string>
    <string name="refresh_receive_address">更新收货地址</string>
    <string name="multiple">×</string>
    <string name="product_total_price">商品总价:</string>
    <string name="number">89.64</string>
    <string name="tax_price">税费:</string>
    <string name="order_total_pricce">订单总价:</string>
    <string name="order_number">订单编号:</string>
    <string name="create_time">创建时间:</string>
    <string name="account_payable">应付款:</string>
    <string name="pay_immediately">立即付款</string>
    <string name="order_detail">订单详情</string>
    <string name="update_time">修改时间:</string>
    <string name="pay_time">付款时间:</string>
    <string name="send_time">发货时间:</string>
    <string name="receive_time">收货时间:</string>
    <string name="complete_time">成交时间:</string>
    <string name="fa_chevron_left">{fa-chevron-left}</string>
    <string name="my_order">我的订单</string>
    <string name="order_type">订单类型:</string>
    <string name="submit_order">提交订单</string>
    <string name="purchase_number">购买数量:</string>
    <string name="total">合计:</string>
    <string name="feedback_manage">反馈管理</string>
    <string name="feedback_detail">反馈详情</string>
    <string name="feedback_time">反馈时间:</string>
    <string name="solve_time">解决时间:</string>
    <string name="feedback_user">反馈用户:</string>
    <string name="feedback_details">反馈详情:</string>
</resources>
