<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_main"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/modify_pwd"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/old_pwd"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edt_modify_pwd_old"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="16sp"
        android:hint="@string/match_case"
        android:background="@android:color/white"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/new_pwd"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edt_modify_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="16sp"
        android:hint="@string/at_least_six_bits"
        android:background="@android:color/white"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:text="@string/sure_pwd"
    android:textSize="20sp"
    android:paddingLeft="15dp"
    android:gravity="center_vertical"
    android:paddingStart="15dp"
    tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/edt_modify_pwd_ensure"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="16sp"
        android:hint="@string/at_least_six_bits"
        android:background="@android:color/white"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_modify_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/border_sure"
        android:layout_margin="20dp"
        />

</android.support.v7.widget.LinearLayoutCompat>