<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_main"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_feedback_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/fa_angle_left"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/feedback_detail"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txt_feedback_detail_status"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:background="@color/app_main"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_feedback_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_feedback_detail_order_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/order_number"
                android:textSize="20sp"
                android:textColor="@color/we_chat_black"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/txt_feedback_detail_orderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/txt_feedback_detail_order_num"
                android:textSize="20sp"
                android:textColor="@color/we_chat_black"
                android:layout_toEndOf="@+id/txt_feedback_detail_order_num" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/fa_chevron_right"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/app_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_details"
                android:textColor="@color/we_chat_black" />

            <TextView
                android:id="@+id/txt_feedback_detail_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/app_background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_user"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"/>
        <TextView
            android:id="@+id/txt_feedback_detail_feedbackUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_time"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"/>
        <TextView
            android:id="@+id/txt_feedback_detail_feedbackTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_feedback_detail_solveTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve_time"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"/>
        <TextView
            android:id="@+id/txt_feedback_detail_solveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>


</LinearLayout>