<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="验证登录"
                android:textColor="@color/we_chat_black"
                android:textSize="25sp"/>

            <!--手机号码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="30dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_in_code_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_phone"
                    android:inputType="phone"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <!--验证码-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_sign_in_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/please_input_identity_code"
                            tools:ignore="HardcodedText" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_get_sign_in_code"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/obtain_identity_code"
                        android:textColor="@color/white"
                        android:background="@color/app_main"
                        android:layout_marginBottom="5dp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btn_sign_in_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/app_main"
                android:gravity="center"
                android:padding="12dp"
                android:text="登录"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_link_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="right"
                android:text="密码登录"
                android:textSize="16sp"
                tools:ignore="HardcodedText"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>


    </ScrollView>
</LinearLayout>